--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>practica - 1</h1>
     <h2>segundo commit-2</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore nihil quo doloremque sapiente, ea recusandae ipsam similique ut eveniet sunt rem optio voluptatem eligendi dolor incidunt nostrum quod. Veritatis, placeat? Sed fugiat porro voluptates dolorum. Reiciendis veritatis cupiditate amet aspernatur. Impedit voluptatem quidem distinctio alias ut exercitationem deleniti et libero repudiandae ullam debitis, culpa suscipit perspiciatis tempore minima consequatur commodi id hic. Nulla esse veniam nemo odio recusandae quasi quidem tempore deleniti nam iusto quae magni aliquid laudantium ipsum facilis in excepturi numquam exercitationem at beatae, saepe aliquam vero optio. Ipsa possimus minima modi totam natus provident quae eveniet iste.</p>
+    <h4>correcion</h4>
 </body>
 </html>
